src/styles/globals.scss
@import "./fonts.scss";
@import "./mixins.scss";

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Gilroy", sans-serif;
}

li {
  list-style: none;
}

.fixed {
  position: fixed;
}

.container {
  max-width: 375px;
  width: 100%;
  margin: auto;
}

button {
  background: none;
  border: none;
  outline: none;
  cursor: pointer;
}

button:focus,
button:active {
  outline: none;
}

a {
  text-decoration: none;
}

body::-webkit-scrollbar {
  display: none;
}

body {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

body {
  background-color: white;
}

